[tool.poetry]
name = "tetrispygame"
version = "0.1.0"
description = "Recreation of Tetris game using Pygame."
authors = ["SarmKunatham <tothemarsplanet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
